--- a/css/style1.css
+++ b/css/style1.css
@@ -21,7 +21,12 @@ p {
     display: flex;
     justify-content: center;
 }
+grayed {
 
+    font-size: 30px;
+    background-color: rgb(121, 121, 121);
+    color: white;
+}
 .actions button {
     padding: 8px 16px;
     font-size: 30px;
@@ -56,6 +61,9 @@ p {
 .card.flipped {
     transform: rotateY(180deg);
 }
+.card.matched {
+    transform: rotateY(180deg);
+}
 
 .front,.back {
     backface-visibility: hidden;
@@ -70,6 +78,7 @@ p {
 .card .front {
 display: flex;
 justify-content: center;
+background-color: black;
 align-items: center;
 transform: rotateY(180deg);
 }
