--- a/css/style1.css
+++ b/css/style1.css
@@ -71,7 +71,23 @@ p {
 .card.matched {
     transform: rotateY(180deg);
 }
-
+.screen {
+    display: flex;
+    background-color: rgba(46, 46, 46, 0.575);
+    color: white;
+    min-width: 100vw;
+    min-height: 100vh;
+    z-index: 2;
+    transform: scale(1);
+    position: absolute;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+.hide {
+    transform: scale(0);
+}
 .front,.back {
     backface-visibility: hidden;
     position: absolute;
